# microservices-python

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8a9559f88338_new_fileds_for_recipe_table.py  f04a438c36b4_create_table_recipe.py
core/: config.py
src/: __init__.py  main.py
src/core/: config.py
src/dbUtil/: __init__.py  db_helper.py
src/jwtUtil/: jwt_util.py
src/main/: main.py
src/main/core/: config.py
src/main/recipes/controllers/: RecipeController.py
src/recipes/: __init__.py
src/recipes/controllers/: recipe_controller.py
src/recipes/dto/: __init__.py  recipe_dto.py
src/recipes/entities/: __init__.py  ingredient_entity.py  recipe_entity.py
src/recipes/services/: __init__.py  recipe_services.py
