[tool.poetry]
name = "recipes-service"
version = "0.1.0"
description = ""
authors = ["Ruslan <ruslanishmaev03@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standart"], version = "^0.30.5"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
