[tool.poetry]
name = "recipes-service"
version = "0.1.0"
description = ""
authors = ["Ruslan <ruslanishmaev03@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standart"], version = "^0.30.5"}
pydantic-settings = "^2.4.0"
black = "^24.8.0"
psycopg2 = "^2.9.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
asyncpg = "^0.29.0"
pyjwt = "^2.9.0"
asyncio = "^3.4.3"
py-eureka-client = "^0.11.10"
requests = "^2.32.3"
logging = "^0.4.9.6"
cryptography = "^43.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
